Fix for chat reactions on mobile

--- a/public/css/obsidian.css
+++ b/public/css/obsidian.css
@@ -493,6 +493,7 @@ select {
 
   .tabs.tertiary button {
     color: var(--link);
+    text-shadow: none;
   }
     .tabs.tertiary button:first-child {
       padding-left: 0px;
